are not entered into bugzilla tend to get forgotten about or ignored.

To see details of a given bug, visit
  https://bugs.kde.org/show_bug.cgi?id=XXXXXX
where XXXXXX is the bug number as listed below.

v = verified fixed in 3_8_BRANCH
m = merged into 3_8_BRANCH

219156    [380] handle statically linked malloc and/or other malloc libs
254088    [380] Valgrind should know about UD2 instruction
274695    [390] s390x: Support "compare to/from logical" instructions (z196)
275800    [390] s390x: Add support for the ecag instruction (part 1)
284004 mv [381] == 301281
289584 m  [381] Unhandled instruction: 0xF 0x29 0xE5 (MOVAPS)
295808 m  [381] amd64->IR: 0xF3 0xF 0xBC 0xC0 (TZCNT)
298281 mv [381] wcslen causes false(?) uninitialised value warnings
301280    [380] == 254088
301281 mv [381] valgrind hangs on OS X when the process calls system()
301902    [380] == 254088
304346    [380] == 219156
304754    [380] NEWS blows TeX's little mind
304867 m  [381] implement MOVBE instruction in x86 mode
304980 m  [381] Assertion 'lo <= hi' failed in vgModuleLocal_find_rx_mapping
305042 m  [381] amd64: implement 0F 7F encoding of movq between two registers
305199 m  [381] ARM: implement QDADD and QDSUB
305321 m  [381] amd64->IR: 0xF 0xD 0xC (prefetchw)
305513 m  [381] killed by fatal signal: SIGSEGV
305690 m  [381] DRD reporting invalid semaphore when sem_trywait returns
                EAGAIN or sem_timedwait returns ETIMEDOUT
305926 m  [381] Invalid alignment checks for some AVX instructions
305948    [390] ppc64: code generation for ShlD64 / ShrD64 asserts
306054    [390] s390x: Condition code computation for convert-to-int/logical
306310    [390] 3.8.0 release tarball missing some files
n-i-bz m  [381] shmat of a segment > 4Gb does not work 
n-i-bz m  [381] simulate_control_c script wrong USR1 sig# on mips
n-i-bz m  [381] vgdb ptrace calls wrong on mips [...]
n-i-bz m  [381] Fixes for more MPI false positives
n-i-bz m  [381] exp-sgcheck's memcpy causes programs to segfault