@@ -24,6 +24,7 @@ v = verified fixed in 3_8_BRANCH
 m = merged into 3_8_BRANCH
 
 219156    [380] handle statically linked malloc and/or other malloc libs
+252955    [390] Impossible to compile with ccache
 254088    [380] Valgrind should know about UD2 instruction
 274695    [390] s390x: Support "compare to/from logical" instructions (z196)
 275800    [390] s390x: Add support for the ecag instruction (part 1)
